# lab-report-harness

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  environment.yml  pyproject.toml  requirements-dev.txt
.agents/skills/create-exec-plan/: SKILL.md
.agents/skills/doc-gardener/: SKILL.md
.agents/skills/pr-check/: SKILL.md
.github/workflows/: ci.yml
docs/: core-beliefs.md  index.md  tech-debt-tracker.md
docs/exec-plans/active/: _TEMPLATE.md  scenario2-sample-module.md
docs/exec-plans/completed/: 2026-02-26-scenario3-fem-pytorch-pipeline.md  README.md  ci-typecheck-doccheck.md
docs/quality/: invariants.md  quality-score.md
docs/runbooks/: bootstrap.md  debugging.md  fem-pipeline.md  release.md
skills/: bootstrap.sh  check_md_links.py  count_doc_todos.py  doc_check.sh  format.sh  lint.sh  pr_check.sh  run_fem_pipeline.sh  test.sh  typecheck.sh
src/lab_report/: __init__.py  series.py
src/lab_report/fem/: __init__.py  features.py  format.py  model.py  parser.py  pipeline.py
tests/: test_fem_pipeline.py  test_series.py
tests/fixtures/fem/: cantilever_high.femres  cantilever_low.femres  cantilever_low_shuffled.femres
